tests/tooling/fixtures/native/recovery/positive/class_annotation_alias_signature.objc3
module ClassAnnotationAliasSignature;

fn choose(flag: bool, when_true: Class, when_false: Class) -> Class {
  if (flag) {
    return when_true;
  }
  return when_false;
}

fn main() -> i32 {
  return choose(true, 41, 9) + 1;
}
